# Mil-Haq_UdS

./: LICENSE  README.md  pyproject.toml
Track2_QML-20251121T152326Z-1-001/: Plan_de_match
Track2_QML-20251121T152326Z-1-001/Track2_QML/: DataLoading_Visualization_example.ipynb  black.py  data.py  dataloaderLSTM.py  dataloading_mitaine.py  imputations.py  lstm_custom_loss.py  lstm_final_track2.pth  model.py  preprocessing.py  qmodel.py  quantum_layer.py  quantum_recevoir.py  scratchpad.py  submission_results.xlsx  template_track2_results.xlsx  train.xlsx  train_hybrid_black.py  train_qml.py  trainlstm.py
