[project]
name = "MIL-HAQ_UdeS"
description = "Repository for UdeS MIL-HAQ Team"
authors = [
    {name = "Alexandre Bernier"},
    {name = "Zacharie Paré"},
    {name = "Michaël Bédard"},
    {name = "Adrien Royer-Larochelle"}
]
version = "0.0.1"
requires-python = ">=3.12"
readme = "README.MD"
license = "MIT"
dependencies = [
    "jupyter>=1.1.1",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.43.1",
    "qiskit-machine-learning>=0.8.2",
    "qiskit[visualization]>=2.2.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

